<resources>
    <string name="app_name">GymTracker</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="back_to_title">Back to Title</string>
    <string name="display_name">Display Name</string>
    <string name="registration">Registration</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="age">Age</string>
    <string name="workouts">Workouts</string>
    <string name="exercises">Exercises</string>
    <string name="reports">Reports</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="select_muscle_group">Select muscle group</string>

    <string-array name="muscles_array">
        <item>abdominals</item>
        <item>abductors</item>
        <item>biceps</item>
        <item>calves</item>
        <item>chest</item>
        <item>forearms</item>
        <item>glutes</item>
        <item>hamstrings</item>
        <item>lats</item>
        <item>lower back</item>
        <item>middle back</item>
        <item>neck</item>
        <item>quadriceps</item>
        <item>traps</item>
        <item>triceps</item>
        <item>other</item>
    </string-array>

    <string-array name="equipment_array">
        <item>abdominals</item>
        <item>abductors</item>
        <item>biceps</item>
        <item>calves</item>
        <item>chest</item>
        <item>forearms</item>
        <item>glutes</item>
        <item>hamstrings</item>
        <item>lats</item>
        <item>lower back</item>
        <item>middle back</item>
        <item>neck</item>
        <item>quadriceps</item>
        <item>traps</item>
        <item>triceps</item>
        <item>other</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>